--- a/base/templates/base/signup.html
+++ b/base/templates/base/signup.html
@@ -28,13 +28,13 @@
 			<div class="form-group form-group-lg">
 				<label class="col-md-4 control-label" for="id_password">*Senha</label>
 				<div class="col-md-8">
-					<input class="form-control" type="text" id="id_password" name="password1" required>
+					<input class="form-control" type="password" id="id_password" name="password1" required>
 				</div>
 			</div>
 			<div class="form-group form-group-lg">
 				<label class="col-md-4 control-label" for="id_password2">*Confirmar Senha</label>
 				<div class="col-md-8">
-					<input class="form-control" type="text" id="id_password2" name="password2" required>
+					<input class="form-control" type="password" id="id_password2" name="password2" required>
 				</div>
 			</div>
 			<div class="form-group form-group-lg">
