--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -46,7 +46,7 @@
               <li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
 			    {% else %}
             <li class="active"><a href="{% url 'index' %}">Home</a></li>
-            <li class=""><a href="#como-funciona">Como funciona</a></li>
+            <li class="lnk-como-funciona"><a href="#como-funciona">Como funciona</a></li>
 				    <li><a href="{% url 'signup' %}">Cadastre-se</a></li>
 				    <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
 			    {% endif %}
