--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -22,7 +22,7 @@
 	</div>
 
 	<div class='col-md-8'>
-		<p class="lead">Você pode fazer várias coisas legais:</p>
+		<h3>Você pode fazer várias coisas legais:</h3>
 		<ul>
 			<li><a href="{% url 'groups' %}">Participar de um Grupo</a></li>
 			<li><a href="{% url 'edit_profile' %}">Completar seu Perfil</a></li>
