--- a/base/templates/trip/route.html
+++ b/base/templates/trip/route.html
@@ -80,9 +80,8 @@
         <table class='table table-bordered foo' id="points">
             <tbody></tbody>
         </table>
+        <a href="{% url 'trip:show' trip.id %}" class="btn btn-primary">Avançar</a>
     </div>
-
-</div>
 </div>
 {% endblock %}
 {% block extrajs %}
