--- a/base/templates/trip/trip_detail.html
+++ b/base/templates/trip/trip_detail.html
@@ -1,8 +1,34 @@
 {% extends "base/master.html" %}
 
 {% block content %}
+<div class='row'>
+    <div class='col-md-8 col-md-offset-2'>
+        <h1>Roteiro de Viagem</h1>
+        <h2>{{ object.name }}</h2>
+        <h6>De {{ object.start_at }}  até {{ object.end_at }} </h6>
+        <p><strong>Origem:</strong> {{ object.start_point }}</p>
+        <p><strong>Destino:</strong> {{ object.end_point }}</p>
+
+        <p>{{ object.description }}</p>
+
+    </div>
+</div>
+
     <div class="row">
-        <div id="map_canvas" style="width: 100%; height: 500px;"></div>
+        <div class='col-md-8 col-md-offset-2'>
+            <div id="map_canvas" style="width: 100%; height: 500px;"></div>
+        </div>
+    </div>
+
+
+    <div class='row'>
+        <div class='col-md-8 col-md-offset-2'>
+            <h4>Roteiro:</h4>
+            {{ object.route_set.all }}
+            {% for cada in object.route_set.all %}
+                {{ cada }}
+            {% endfor %}
+        </div>
     </div>
     <script>
         var Directions = {
@@ -15,4 +41,7 @@
             ]
         }
     </script>
+
+
+
 {% endblock %}
