--- a/base/templates/trip/trip_detail.html
+++ b/base/templates/trip/trip_detail.html
@@ -12,6 +12,12 @@
         <p><strong>Descrição:</strong></p>
         <p>{{ object.description }}</p>
 
+
+    <div class="g-plusone" data-annotation="inline" data-width="120"></div>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="pt" data-size="medium" data-hashtags="ufsm">Tweetar</a>
+    <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <div id="fb-root"></div>
+
     </div>
 </div>
 
@@ -47,6 +53,30 @@
         }
     </script>
 
+
+
+{% endblock %}
+
+
+
+
+{% block extrajs %}
+
+
+
+    <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=268350933326804";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<script type="text/javascript" async defer src="https://apis.google.com/js/platform.js?publisherid=105592117570270546246"></script>
 
 
 {% endblock %}
