--- a/base/templates/trip/trip_detail.html
+++ b/base/templates/trip/trip_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class='row'>
-    <div class='col-md-8 col-md-offset-2'>
+    <div class='col-md-6 col-md-offset-2'>
         <h1>Roteiro de Viagem</h1>
         <h2>{{ object.name }}</h2>
         <h6>De {{ object.start_at }}  até {{ object.end_at }} </h6>
@@ -11,12 +11,13 @@
         <p><strong>Destino:</strong> {{ object.end_point }}</p>
         <p><strong>Descrição:</strong></p>
         <p>{{ object.description }}</p>
+    </div>
 
-
-    <div class="g-plusone" data-annotation="inline" data-width="120"></div>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="pt" data-size="medium" data-hashtags="ufsm">Tweetar</a>
-    <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-    <div id="fb-root"></div>
+    <div class='col-md-2'>
+        <div class="g-plusone" data-annotation="inline" data-width="120"></div><br>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-lang="pt" data-size="medium" data-hashtags="ufsm">Tweetar</a><br>
+        <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+        <div id="fb-root"></div>
 
     </div>
 </div>
