--- a/base/templates/trip/trip_detail.html
+++ b/base/templates/trip/trip_detail.html
@@ -1,5 +1,10 @@
 {% extends "base/master.html" %}
 
+
+{% block title %}{{ object.name }}{% endblock %}
+
+{% block description %}{{ object.description }}{% endblock %}
+
 {% block content %}
 <div class='row'>
     <div class='col-md-6 col-md-offset-2'>
