--- a/base/templates/trip/trip_detail.html
+++ b/base/templates/trip/trip_detail.html
@@ -11,7 +11,7 @@
         <h1>Roteiro de Viagem</h1>
         <h2>{{ object.name }}</h2>
         <h6>De {{ object.start_at }}  até {{ object.end_at }} </h6>
-        <h4>Elaborado por <strong>{{ object.owner.userprofile.name }}</strong> para o Grupo <strong>{{ object.group.name }}</strong></h4>
+        <h4>Elaborado por <strong>{{ object.owner.userprofile.name }}</strong> para o Grupo <strong><a href="{% url 'group_details' object.group.id %}">{{ object.group.name }}</a></strong></h4>
         <p><strong>Origem:</strong> {{ object.start_point }}</p>
         <p><strong>Destino:</strong> {{ object.end_point }}</p>
         <p><strong>Descrição:</strong></p>
