--- a/base/templates/base/master.html
+++ b/base/templates/base/master.html
@@ -61,6 +61,11 @@
         {% block content %}
         {% endblock %}
       </div><!-- /.container -->
+      <footer id="footer">
+        <nav class="navbar navbar-default">
+          <a class="navbar-brand" href="/">MotoTrip</a>
+        </nav>
+      </footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script src="{% static 'js/bootstrap.min.js' %}"></script>
